<resources>
    <string name="app_name">DistanceTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_text">Continue</string>
    <string name="permisson_string">Welcome to Distance tracker, We need some permission to run this App</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="message">TAP ON MY LOCATION BUTTON</string>
    <string name="_3">3</string>
    <string name="distance">Distance</string>
    <string name="result">%1$s km</string>
</resources>